--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_es.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_es.xml
@@ -354,13 +354,13 @@ click the "Details" tab.
 Cambio de preferencias en la notificación
 ---------------------------------
 Para habilitar o inhabilitar sus preferencias de alerta de erratas de de forma global, inicie sesión en @@PRODUCT_NAME@@
-y navegue desde "Visión General" / "Su cuenta" a la pestaña de "Preferencias".
+y navegue desde &quot;Visión General&quot; / &quot;Su cuenta&quot; a la pestaña de &quot;Preferencias&quot;.
 
         URL: {0}
 
 También puede habilitar o inhabilitar las notificaciones por sistema, al seleccionar un
-sistema individual de la "Lista de sistemas". De la vista de sistemas individuales
-haga clic en la pestaña de "Detalles".
+sistema individual de la &quot;Lista de sistemas&quot;. De la vista de sistemas individuales
+haga clic en la pestaña de &quot;Detalles&quot;.
 
 {1}
 {2}
