--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_it.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_it.xml
@@ -349,12 +349,12 @@ click the "Details" tab.
 Modifica della preferenze di notifica
 ---------------------------------
 Per abilitare/disabilitare globalmente le preferenze dell'Errata Alert eseguire una registrazione con @@PRODUCT_NAME@@
-e navigare da "Panoramica" / "Il tuo Account" alla scheda delle "Preferenze".
+e navigare da &quot;Panoramica&quot; / &quot;Il tuo Account&quot; alla scheda delle &quot;Preferenze&quot;.
 
         URL: {0}
 
-È possibile altresì abilitare/disabilitare le notifiche in base al sistema selezionando un sistema desiderato da "Elenco sistemi". Dalla visuale singola selezionare la scheda 
-"Dettagli".
+È possibile altresì abilitare/disabilitare le notifiche in base al sistema selezionando un sistema desiderato da &quot;Elenco sistemi&quot;. Dalla visuale singola selezionare la scheda 
+&quot;Dettagli&quot;.
 
 {1}
 {2}
