--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_ja.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_ja.xml
@@ -353,13 +353,13 @@ click the "Details" tab.
 通知設定の変更
 ---------------------------------
 エラータアラート設定をグローバルで有効または無効にするには、@@PRODUCT_NAME@@ にログインし、
-"概要" / "お客様のアカウント" から "個人設定" タブにナビゲートします。
+&quot;概要&quot; / &quot;お客様のアカウント&quot; から &quot;個人設定&quot; タブにナビゲートします。
 
         URL: {0}
 
-また、"システムリスト" から個々のシステム選択してシステムごとに通知を有効または
+また、&quot;システムリスト&quot; から個々のシステム選択してシステムごとに通知を有効または
 無効にすることもできます。個々のシステムビューから、
-"詳細" タブをクリックします。
+&quot;詳細&quot; タブをクリックします。
 
 {1}
 {2}
