--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_ko.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_ko.xml
@@ -353,12 +353,12 @@ click the "Details" tab.
 통지 설정 변경
 ---------------------------------
 에라타 통지 설정을 전역으로 활성화 또는 비활성화하려면 @@PRODUCT_NAME@@에 
-로그인하고 "개요"/"사용자 계정"에서 "설정" 탭으로 이동합니다.
+로그인하고 &quot;개요&quot;/&quot;사용자 계정&quot;에서 &quot;설정&quot; 탭으로 이동합니다.
 
         URL: {0}
 
-또한 "시스템 목록"에서 개별 시스템을 선택하여 시스템마다 통지를활성화하거나 
-비활성화할 수 있습니다. 개별 시스템 보기에서 "상세 정보" 탭을 클릭합니다.
+또한 &quot;시스템 목록&quot;에서 개별 시스템을 선택하여 시스템마다 통지를활성화하거나 
+비활성화할 수 있습니다. 개별 시스템 보기에서 &quot;상세 정보&quot; 탭을 클릭합니다.
 
 {1}
 {2}
