--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_pt_BR.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_pt_BR.xml
@@ -354,12 +354,12 @@ click the "Details" tab.
 Modificação das Preferências de Notificação
 ---------------------------------
 Para ativar/desativar globalmente suas preferências de Alerta de Erros, por favor realize o login no @@PRODUCT_NAME@@
-e navegue do tab "Visão Geral" / "Sua Conta" para "Preferências".
+e navegue do tab &quot;Visão Geral&quot; / &quot;Sua Conta&quot; para &quot;Preferências&quot;.
 
         URL: {0}
 
 Além disso, você pode ativar/desativar a notificação baseando-se no sistema pela seleção de
-um sistema individual a partir da "Lista de Sistemas". Clique no tab "Detalhes"
+um sistema individual a partir da &quot;Lista de Sistemas&quot;. Clique no tab &quot;Detalhes&quot;
 da visualização individual do sistema.
 
 {1}
