1189354 - restore missing cfg-diff CSS

--- a/branding/css/spacewalk-tools.less
+++ b/branding/css/spacewalk-tools.less
@@ -6,3 +6,38 @@
 .error-list {
     padding-left: 1px;
 }
+
+/** config mgmt feature file diff styles **/
+
+.oldfile {
+    float: left;
+    width: 48%;
+    font-family: 'monospace';
+}
+
+.newfile {
+    float: right;
+    width: 48%;
+    font-family: 'monospace';
+}
+
+.changed {
+    background-color: #f5f3c4;
+}
+
+.oldfile .deleted {
+    background-color: #f5c4c4;
+}
+
+.newfile .deleted {
+    background-color: #d4d4d4;
+}
+
+.oldfile .inserted {
+    background-color: #d4d4d4;
+}
+
+.newfile .inserted {
+    background-color: #c5f4c4;
+}
+
