--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_en_US.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_en_US.xml
@@ -361,27 +361,26 @@ until your certificate is renewed.</source>
         <source>
 [ This is an automated email sent to {0} at your request. ]
 
-Your @@PRODUCT_NAME@@ password has been reset.  To sign in, go to:
+A request to reset the @@PRODUCT_NAME@@ password for login {2} has been made.
 
-https://{1}/
+To continue the reset process, please proceed to:
 
-And use the following username and password:
+{1}
 
-Username: {2}
-Password: {3}
+If you don't want your password reset, you can ignore this email.
 
-Once you have logged in, you may then change your password.
-
-If you continue to have difficulties logging in, please contact
-your @@PRODUCT_NAME@@ administrator for further assistance.
+If you experience any further difficulties with the reset process,
+please contact your @@PRODUCT_NAME@@ administrator for further assistance.
 
 Thank you for using @@PRODUCT_NAME@@.
         </source>
-        <context-group name="ctx"><context context-type="sourcefile">ForgotCredentials</context><context context-type="paramnotes">
+        <context-group name="ctx">
+            <context context-type="sourcefile">ForgotCredentials</context>
+            <context context-type="paramnotes">
             {0} - Email address
-            {1} - Hostname of the @@PRODUCT_NAME@@</context>
+            {1} - Password-reset link
             {2} - Username
-            {3} - Password
+            </context>
         </context-group>
       </trans-unit>
       <trans-unit id="email.forgotten.logins">
@@ -410,6 +409,27 @@ Thank you for using @@PRODUCT_NAME@@.
             {0} - Email address
             {1} - Existing logins
             {2} - Hostname of the @@PRODUCT_NAME@@</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="email.reset.password">
+        <source>
+[ This is an automated email sent to {0}. ]
+
+The @@PRODUCT_NAME@@ password for login {1} has been reset in response to a reset-request
+made at {2}
+
+If you did not initiate this password reset, please IMMEDIATELY contact the @@PRODUCT_NAME@@
+administrator at {2} for further assistance.
+
+Thank you for using @@PRODUCT_NAME@@.
+        </source>
+        <context-group name="ctx">
+          <context context-type="sourcefile">ResetPasswordSubmit</context>
+          <context context-type="paramnotes">
+            {0} - Email address
+            {1} - Associated login
+            {2} - Hostname of the @@PRODUCT_NAME@@
+          </context>
         </context-group>
       </trans-unit>
     </body>
