--- a/java/code/webapp/WEB-INF/pages/common/fragments/admin/channelperms_list.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/admin/channelperms_list.jspf
@@ -9,7 +9,7 @@
         </c:if>
         <c:if test="${not (userIsChannelAdmin or current.globallySubscribable)}">
             <html:multibox property="selectedChannels">${current.id}</html:multibox>
-            <input type='hidden' name="cid" value="${current.id}" />
+            <rhn:hidden name="cid" value="${current.id}" />
         </c:if>
     </rhn:column>
     <rhn:column header="channelperms.jsp.channelname">
