1313515 - action-chain CSS wants a dynamic attribute-name - revert to 'stock' <input type='hidden'

--- a/java/code/webapp/WEB-INF/pages/common/fragments/schedule-options.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/schedule-options.jspf
@@ -22,7 +22,7 @@
             <label for="schedule-by-action-chain"><bean:message key="schedule-options.action-chain"/></label>
         </div>
         <div class="col-sm-6">
-            <rhn:hidden id="action-chain" name="action_chain"
+            <input type="hidden" id="action-chain" name="action_chain"
                 data-existing-action-chains='${existingActionChains}'
             />
         </div>
