1313515 - <input...> is ok, <rhn:hidden > is not - close your tags!

--- a/java/code/webapp/WEB-INF/pages/common/fragments/audit/scap-list.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/audit/scap-list.jspf
@@ -1,6 +1,6 @@
 <rl:listset name="xccdfScans" legend="xccdf">
         <rhn:csrf />
-        <rhn:hidden name="sid" value="${param.sid}">
+        <rhn:hidden name="sid" value="${param.sid}" />
 
         <rl:list emptykey="system.audit.listscap.jsp.noscans" dataset="pageList" name="xccdfScans">
                 <rl:decorator name="ElaborationDecorator"/>
