1313515 - cobbler-variables.jspf has a 'special' use of <input type='hidden'>

--- a/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/cobbler-variables.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/cobbler-variables.jspf
@@ -40,6 +40,6 @@
             </html:submit>
         </div>
     </div>
-    <rhn:hidden name="${param.name}" value="${param.value}" />
+    <input type=hidden name="${param.name}" value="${param.value}" />
     <html:hidden property="submitted" value="true"/>
 </html:form>
