--- a/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/clone.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/clone.jspf
@@ -2,12 +2,13 @@
 <%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn" %>
 <%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean" %>
 <%@ taglib uri="http://struts.apache.org/tags-html" prefix="html" %>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/functions" prefix="fn" %>
 
 
 <html>
 <body>
 <rhn:toolbar base="h1" icon="header-kickstart" imgAlt="system.common.kickstartAlt">
-  <bean:message key="kickstart.clone.jsp.header1" arg0="${ksdata.label}"/>
+  <bean:message key="kickstart.clone.jsp.header1" arg0="${fn:escapeXml(ksdata.label)}"/>
 </rhn:toolbar>
 
 <rhn:dialogmenu mindepth="0" maxdepth="1"
