--- a/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/advanced/details.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/advanced/details.jspf
@@ -11,7 +11,7 @@
                    action="${param.url}?csrf_token=${csrfToken}"
                    enctype="multipart/form-data">
             <rhn:csrf />
-            <h2><bean:message key="${param.title_key)}"/></h2>
+            <h2><bean:message key="${param.title_key}"/></h2>
             <p><bean:message key="${param.summary_key}"/></p>
             <div class="form-group">
                 <label class="col-lg-3 control-label">
